--- a/task_1/parser.ipynb
+++ b/task_1/parser.ipynb
@@ -168,10 +168,8 @@
     "            quote_dict[\"quote\"] = quote.find('span', class_=\"text\").text\n",
     "            quote_dict[\"author\"] = quote.find('small', class_='author').text\n",
     "\n",
-    "            tmp = []\n",
-    "            for tag in quote.find_all('a', class_=\"tag\"):\n",
-    "                tmp.append(tag.text)\n",
-    "            quote_dict[\"tag\"] = tmp\n",
+    "            tags = quote.find('meta', class_='keywords')['content'].split(',')\n",
+    "            quote_dict[\"tag\"] = tags\n",
     "\n",
     "            res.append(quote_dict)\n",
     "\n",
@@ -182,7 +180,7 @@
     "\n",
     "\n",
     "    def save_content(self):\n",
-    "        name_f = \"content_\" + dt.now().strftime('%H:%M_%d.%m.%Y')\n",
+    "        name_f = \"content_\" + dt.now().strftime('%H:%M_%d.%m.%Y') + '.json'\n",
     "        with open(name_f, 'w') as f:\n",
     "            json.dump(self.content, f)\n",
     "        \n",
