--- a/task_1and2/parser.ipynb
+++ b/task_1and2/parser.ipynb
@@ -58,7 +58,7 @@
     "            print(f\"Start {page} page parsing\")\n",
     "            print(\"url --> \" + page_url)\n",
     "\n",
-    "            sleep(round(random.uniform(0, 3), 3)) # <<<---( Гигиена )\n",
+    "            sleep(round(random.uniform(0, 3), 3))\n",
     "            soup = self.get_page_soup(page_url, headers)\n",
     "            if soup == None:\n",
     "                return content\n",
@@ -67,7 +67,7 @@
     "            content.extend(tmp)\n",
     "            try:\n",
     "                page += 1\n",
-    "                soup.find('a', href=f\"/page/{page}/\").text # <<<---( Проверка наличия следующей страницы )\n",
+    "                soup.find('a', href=f\"/page/{page}/\").text\n",
     "            except AttributeError:\n",
     "                print()\n",
     "                print(\"end content\")\n",
