--- a/task_1and2/parser.ipynb
+++ b/task_1and2/parser.ipynb
@@ -115,13 +115,13 @@
     "        return res\n",
     "\n",
     "\n",
-    "    def save_content(self):\n",
+    "    def prepare_data_content(self):\n",
     "        self.name_f = \"content_\" + dt.now().strftime('%H:%M_%d.%m.%Y') + '.json' # <<<---( .json )\n",
     "        with open(self.name_f, 'w') as f:\n",
     "            json.dump(self.content, f)\n",
     "                    \n",
     "        print()\n",
-    "        print(\"Save: OK\")\n",
+    "        print(\"prepare_data: OK\")\n",
     "        print(\"Name: \" + self.name_f)\n",
     "\n",
     "\n",
